# Monopoly

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
data/: Load.txt
include/: AngularBox.h  BankAccount.h  Board.h  Box.h  Casela_Laterale.h  Casella.h  Casella_Angolare.h  ComputerPlayer.h  Game.h  HumanPlayer.h  LateralBox.h  Player.h  Players.h  RealPlayer.h  ScoreBoard.h  VirtualPlayer.h
src/: AngularBox.cpp  BankAccount.cpp  Board.cpp  Box.cpp  Casella.cpp  Casella_Laterale.cpp  ComputerPlayer.cpp  Game.cpp  HumanPlayer.cpp  LateralBox.cpp  Player.cpp  Players.cpp  RealPlayer.cpp  ScoreBoard.cpp  VirtualPlayer.cpp  main.cpp
